--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -7,7 +7,7 @@
         <H1>States</H1>
         <UL>
             {% for state in states %}
-            <LI>{{ state.id }}: {{ state.name }}</LI>
+            <LI>{{ state.id }}: <b>{{ state.name }}</b></LI>
             {% endfor %}
         </UL>
     </BODY>
